# face-recognition-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  build.sh  main.cpp  opencv-read-write.cpp  vcpkg.json
docker/: CMakeLists.txt  Dockerfile
src/: opencv-dlib-face-det.cpp  opencv-dlib-face-recognition.cpp  opencv-read-write.cpp  opencv-version.cpp  opencv-webcam.cpp  rest-client.cpp  web-server.cpp
